# client

./: CMakeLists.txt  makefile
include/: Task.h  connectionHandler.h
src/: BGRSclient.cpp  Task.cpp  connectionHandler.cpp  echoClient.cpp
